# SlocCount

./: .prettierignore  Justfile  README.md  lefthook.yml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/setup-dashboard-dependencies/: action.yml
.github/actions/setup-diagrams-dependencies/: action.yml
.github/actions/setup-scanner-dependencies/: action.yml
.github/actions/setup-tests-dependencies/: action.yml
.github/workflows/: code-checks.yml  deploy.yml  pull-request-tasks.yml  sync-labels.yml
20_markdown_link_checker/: action.json  report.json
21_update_editorconfig_checker/: action.json  report.json
22_codeql_cron/: action.json  report.json
23_dependabot_groups/: action.json  report.json
24_remove_pinact_config/: action.json  report.json
25_zizmor_config/: action.json  report.json
26_zizmor_sarif/: action.json  report.json
27_dependabot_reusable_workflows/: action.json  report.json
28_common_sync_labels/: action.json  report.json
29_common_clear_caches/: action.json  report.json
30_dependabot_reusable_workflows/: action.json  report.json
31_migrate_to_reusable_codeql_workflow/: action.json  report.json
SlocCount/: action.json  report.json
action_update/: action.json  report.json
active/: action.json  report.json
bump/: action.json  report.json
bump-versions/: action.json  report.json
cleanu/: action.json  report.json
codelimit/: action.json  report.json
coverage/: action.json  codelimit.md  report.json
dashboard/: action.json  components.json  package-lock.json  package.json  report.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: Sidebar.tsx  app-sidebar.tsx  background.tsx  data-pane.tsx  overview-stats-data-pane.tsx  repository-stats-data-pane.tsx
dashboard/src/components/ui/: button.tsx  sidebar.tsx
dashboard/src/lib/: data.ts
dashboard/src/types/: types.ts
dependabot/github_actions/main/github-actions-06ae9f9a40/: action.json  report.json
dependabot/github_actions/main/github-actions-0d9e5b3438/: action.json  report.json
dependabot/github_actions/main/github-actions-25b351fe54/: action.json  report.json
dependabot/github_actions/main/github-actions-2cd8dab68d/: action.json  report.json
dependabot/github_actions/main/github-actions-3994f91b89/: action.json  report.json
dependabot/github_actions/main/github-actions-3afa79d33b/: action.json  report.json
dependabot/github_actions/main/github-actions-457f4a2760/: action.json  report.json
dependabot/github_actions/main/github-actions-7f0cb3de17/: action.json  report.json
dependabot/github_actions/main/github-actions-97ca20955f/: action.json  report.json
dependabot/github_actions/main/github-actions-9d672f116e/: action.json  report.json
dependabot/github_actions/main/github-actions-bcec9b2628/: action.json  report.json
dependabot/github_actions/main/github-actions-cb00a53edc/: action.json  report.json
dependabot/github_actions/main/github-actions-d9506e3551/: action.json  report.json
dependabot/github_actions/main/github-actions-df1041a300/: action.json  report.json
dependabot/github_actions/main/github-actions-f915e8c6f9/: action.json  report.json
dependabot/github_actions/main/github-actions-fc6f20d3e7/: action.json  report.json
dependabot/npm_and_yarn/dashboard/npm_and_yarn-14f44f5325/: action.json  report.json
dependabot2/: action.json  report.json
deploy/: action.json  report.json
deploy2/: action.json  report.json
deployment-concurrency/: action.json  report.json
descr/: action.json  report.json
diagram/: action.json  report.json
diagrams/: c4.py  pyproject.toml
download-file/: action.json  report.json
engine-version/: action.json  report.json
exclude_search/: action.json  report.json
flow-diagram/: action.json  report.json
json_output/: action.json  codelimit.md  report.json
main/: codelimit.md  report.json
manual-deploy/: action.json  report.json
npm-dependabot/: action.json  report.json
npm-init/: action.json  report.json
pin/: action.json  report.json
pin-actions/: action.json  report.json
pygount/: action.json  codelimit.md  report.json
remove_diagrams/: action.json  report.json
remove_git/: action.json  report.json
repo-repo/: action.json  report.json
reusable-workflows/: action.json  report.json
reusable-workflows2/: action.json  report.json
run-prettier/: action.json  report.json
scanner/: .gitignore  main.py  output_notebook.py  pyproject.toml  scanner.just
scanner/app/: __main__.py  analysis.py  custom_logging.py  custom_types.py  github_interactions.py
scanner/app/tests/: test__main.__py  test__main__.py  test_analysis.py  test_custom_logging.py  test_github_integrations.py
schema-test/: action.json  report.json
schema_validation/: action.json  report.json
scripts/: deployment.py  scanner_flowchart.py
set-version/: action.json  report.json
setup-versions/: action.json  report.json
status/: action.json  report.json
superlinter/: action.json  report.json
superlinter-update/: action.json  report.json
test-dependencies/: action.json  report.json
test_workflow/: action.json  report.json
tests/: pyproject.toml  tests.just
tests/scanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/schema_validation/: output_schema.json
tests/ui/: test_dashboard.py
tests/ui/utils/: environment_variables.py
typescript/: action.json  report.json
update/: action.json  codelimit.md  report.json
update2/: action.json  report.json
upload/: action.json  report.json
uv/: action.json  codelimit.md  report.json
uv-lock/: action.json  report.json
uv-lock2/: action.json  report.json
uv2/: action.json  report.json
website/: action.json  report.json
(+77 files in other folders)
