[project]
name = "scanner"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = [
  "gitpython==3.1.45",
  "pydantic==2.11.7",
  "pygithub==2.8.1",
  "pygount==3.1.0",
  "python-dateutil==2.9.0",
  "structlog==25.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest-cov==6.3.0",
  "pytest==8.4.2",
  "ruff==0.12.12",
  "ty==0.0.1a16",
  "vulture==2.14",
]

[tool.uv]
required-version = "~=0.8.0"
package = false
override-dependencies = ["urllib3==2.5.0", "requests==2.32.4"]

[tool.setuptools]
py-modules = ["app", "cloned_repositories"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501"]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "N999",    # Ignore invalid module name
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
  "FBT001",  # Ignore Boolean-typed positional argument in function definition
  "FBT002",  # Ignore Boolean-typed positional argument in function definition
]

fixable = ["ALL"]
unfixable = []

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["scanner"]

[tool.pytest.ini_options]
norecursedirs = "cloned_repositories"

[tool.vulture]
exclude = [".venv"]
ignore_names = ["summary"]
