[project]
name = "scanner"
dynamic = ["version"]
requires-python = "~=3.14.0"
dependencies = [
  "gitpython==3.1.50",
  "pydantic==2.13.4",
  "pygithub==2.9.1",
  "pygount==3.2.0",
  "python-dateutil==2.9.0",
  "structlog==26.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest-cov==7.1.0",
  "pytest==9.1.1",
  "ruff==0.15.21",
  "ty==0.0.58",
  "vulture==2.16",
]

[tool.uv]
required-version = "~=0.11.0"
package = false

[tool.setuptools]
py-modules = ["app", "cloned_repositories"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501"]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "N999",    # Ignore invalid module name
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
  "FBT001",  # Ignore Boolean-typed positional argument in function definition
  "FBT002",  # Ignore Boolean-typed positional argument in function definition
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["scanner"]

[tool.pytest.ini_options]
norecursedirs = "cloned_repositories"

[tool.vulture]
exclude = [".venv"]
ignore_names = ["summary"]
