[project]
name = "scanner"
dynamic = ["version"]
requires-python = "~=3.14.0"
dependencies = [
  "check-jsonschema==0.37.4",
  "defusedxml==0.7.1",
  "playwright==1.61.0",
  "pytest-playwright==0.8.0",
  "pytest-rerunfailures==16.4",
  "pytest==9.1.1",
  "requests==2.34.2",
  "ruff==0.15.21",
  "ty==0.0.59",
]

[tool.uv]
required-version = "~=0.11.0"
package = false

[tool.setuptools]
py-modules = ["ui", "schema_validation"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501"]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "N999",    # Ignore invalid module name
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"
